--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-text-mask": "^5.4.3",
     "styled-components": "^5.1.0",
     "typescript": "~3.7.2"
   },
@@ -46,6 +47,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.4",
+    "@types/react-text-mask": "^5.4.6",
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
